--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container">
         <div id="leftside">
         <h3>LSB playground</h3>
-        <p>Visit project page on GitHub.</p>
+        <p>Visit <a href="https://github.com/desudesutalk/lsbtools">project page on GitHub</a>.</p>
         <table>
             <tr>
                 <td><labeL for="image-select">Image: </labeL></td>
